--- a/MotoCronos/templates/pages/racers/NLRacers.html
+++ b/MotoCronos/templates/pages/racers/NLRacers.html
@@ -77,7 +77,7 @@
                 <div class="card-header pb-0">
                     <div class="d-flex align-items-center">
                         <div class="d-flex align-items-center">
-                            <p class="mb-0"><strong>Ingrese nombre o apellido del corredor</strong></p>
+                            <h5 class="mb-0">Ingrese nombre o apellido del corredor</h5>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="example-text-input" class="form-control-label">Nombre o Apellido</label>
+                                <label for="example-text-input" class="form-control-label"><h6 class="font-weight-bold">Nombre o Apellido</h6></label>
                                 <input class="form-control" type="text" value="" maxlength="64" id="name" name="name" pattern="[a-zA-Z]+" required>
                             </div>
                         </div>
