--- a/MotoCronos/templates/pages/racers/editRacer.html
+++ b/MotoCronos/templates/pages/racers/editRacer.html
@@ -75,6 +75,8 @@
               <div class="form-group">
                 <input type="hidden" value="True" name="update" id="update">
                 <input type="submit" class="btn btn-primary" value="Guardar" id="btnSave">
+                <a class="btn btn-danger" href="{{ request.META.HTTP_REFERER }}">Volver atrás</a>
+
               </div>
             </div>
             </div>
