--- a/MotoCronos/templates/pages/racers/newRacer.html
+++ b/MotoCronos/templates/pages/racers/newRacer.html
@@ -10,7 +10,7 @@
             <div class="card-header pb-0">
               <div class="d-flex align-items-center">
                 <div class="d-flex align-items-center">
-                  <p class="mb-0"><strong>Ingrese datos del Corredor</strong></p>
+                  <h5 class="text-dark font-weight-bold">Ingrese datos del Corredor</h5>
                   
                 </div>
                 
@@ -22,33 +22,32 @@
               <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                      <label for="example-text-input" class="form-control-label">Nombre</label>
+                      <label for="example-text-input" class="text-dark"> <h6 class="font-weight-bold">Nombre</h6></label>
                       <input class="form-control" type="text" value="" maxlength="64" id="name" name="name" pattern="[a-zA-Z ]+" required>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                      <label for="example-text-input" class="form-control-label">Apellido</label>
+                      <label for="example-text-input" class="form-control-label"> <h6 class="font-weight-bold" >Apellido</h6></label>
                       <input class="form-control" type="text" value="" maxlength="64" id="lname" name="lname" pattern="[a-zA-Z ]+" required>
                     </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="example-number-input" class="form-control-label">DNI</label>
+                    <label for="example-number-input" class="form-control-label"><h6 class="font-weight-bold">DNI</h6></label>
                     <input class="form-control" type="text" value="" id="dni" name="dni" minlength="5" maxlength="15" pattern="[0-9]+" required>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="example-number-input" class="form-control-label">Fecha de Nacimiento</label>
+                    <label for="example-number-input" class="form-control-label"><h6 class="font-weight-bold">Fecha de Nacimiento</h6></label>
                     <input class="form-control" type="date" value="" id="birth" name="birth" required>
                   </div>
                 </div>
               </div>
-              <p class="text-uppercase text-sm">Contacto</p>
                 <div class="col-md-4">
                   <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Celular</label>
+                    <label for="example-text-input" class="form-control-label"><h6 class="font-weight-bold">Celular</h6></label>
                     <input class="form-control" type="text" value="" maxlength="10" minlength="10" pattern="[0-9]+" id="cel" name="cel" required>
                   </div>
                 </div> <br>
