--- a/MotoCronos/templates/pages/races/newRace.html
+++ b/MotoCronos/templates/pages/races/newRace.html
@@ -12,7 +12,7 @@
           <div class="card">
             <div class="card-header pb-0">
               <div class="d-flex align-items-center">
-                <p class="mb-0"><strong>Detalles de Carrera</strong></p>
+                <p class="text-dark font-weight-bold"><strong>Detalles de Carrera</strong></p>
                 
               </div>
             </div>
@@ -20,7 +20,9 @@
               <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                      <label for="example-text-input" class="form-control-label">Nombre de Carrera</label>
+                      <label for="example-text-input" class="form-control-label">
+                        <h5 class="text-dark font-weight-bold">Nombre de Carrera</h5>
+                      </label>
                       <input class="form-control" type="text" value="" min="5" maxlength="32" id="name" name="name" pattern="[A-Za-z0-9 ]*" required>
                     </div>
                 </div>
