--- a/MotoCronos/templates/base.html
+++ b/MotoCronos/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% if request.user.is_authenticated %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,22 +16,22 @@
   <title>
     MotoCronos
   </title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="{% static 'assets/js/ajax.googleapis.com_ajax_libs_jquery_3.5.1_jquery.min.js' %}"></script>
+  <script src="{% static 'assets/js/maxcdn.bootstrapcdn.com_bootstrap_4.5.2_js_bootstrap.min.js' %}"></script>
 
   <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+  <link href="{% static 'assets/fonts/fonts.googleapis.com_css_family=Open+Sans_300,400,600,700.css' %}" rel="stylesheet"/>
   <!-- Nucleo Icons -->
-  <link href="{% static 'assets/css/nucleo-icons.css' %}" rel="stylesheet" />
-  <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/nucleo-icons.css' %}" rel="stylesheet"/>
+  <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet"/>
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/nucleo-svg.css' %}" rel="stylesheet"/>
   <!-- CSS Files -->
-  <link id="pagestyle" href="{% static 'assets/css/argon-dashboard.css' %}" rel="stylesheet" />
+  <link id="pagestyle" href="{% static 'assets/css/argon-dashboard.css' %}" rel="stylesheet"/>
 </head>
 
-<body class="g-sidenav-show   bg-gray-100">
+<body class="g-sidenav-show bg-gray-100">
   <div class="min-height-300 bg-primary position-absolute w-100 opacity-3"><img src="{% static 'assets/img/motos/moto.jpg' %}" alt="" width="100%"></div>
   <aside class="sidenav bg-white navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-4 " id="sidenav-main">
     <div class="sidenav-header">
@@ -40,7 +42,7 @@
       </a>
     </div>
     <hr class="horizontal dark mt-0">
-    <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
+    <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link {% if path_race %}active disabled{% endif %}" href="#" data-toggle="collapse" data-target="#race">
@@ -83,19 +85,7 @@
                       <span class="nav-link-text ms-1">Ver carreras pasadas</span>
                     {% endif %}
                   </a>
-                </li>
-                <li class="nav-item collapse {% if path_race %}show{% endif %}" id="race">
-                  <a class="nav-link {%if request.path == '/race/editRace/'%}disabled{%endif%}" href="{% url 'editRace' %}">
-                    <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                    </div>
-                    {% if request.path == '/race/editRace/' %}
-                      <span class="nav-link-text ms-1 active"><strong>Modificar carrera activa</strong></span>
-                    {% else %}
-                      <span class="nav-link-text ms-1">Modificar carrera activa</span>
-                    {% endif %}
-                  </a>
-                </li>
-                
+                </li>                
         <li class="nav-item">
           <a class="nav-link {% if path_racer %}active disabled{% endif %}" href="#" data-toggle="collapse" data-target="#racer">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
@@ -135,7 +125,6 @@
                     {% else %}
                     <span class="nav-link-text ms-1">Buscar por DNI</span>
                     {% endif %}
-                    
                   </a>
                 </li>
                 <li class="nav-item collapse {% if path_racer %}show{% endif %}  " id="racer">
@@ -147,7 +136,6 @@
                     {% else %}
                     <span class="nav-link-text ms-1">Buscar por Nombre</span>
                     {% endif %}
-                    
                   </a>
                 </li>
 
@@ -166,34 +154,6 @@
                     <span class="nav-link-text ms-1">Comenzar</span>
                   </a>
                 </li>
-
-        <li class="nav-item mt-3">
-          <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{% static 'pages/profile.html' %}">
-            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text ms-1">Profile</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{% url 'login' %}">
-            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-single-copy-04 text-warning text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text ms-1">Sign In</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{% static 'pages/sign-up.html' %}">
-            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-collection text-info text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text ms-1">Sign Up</span>
-          </a>
-        </li>
       </ul>
     </div>    
   </aside>
@@ -216,7 +176,7 @@
           </div>
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-white font-weight-bold px-0">
+              <a href="{% url 'logout' %}" class="nav-link text-white font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none text-dark"><strong>Logout</strong></span>
               </a>
@@ -246,7 +206,7 @@
   <script src="{% static 'assets/js/plugins/perfect-scrollbar.min.js' %}"></script>
   <script src="{% static 'assets/js/plugins/smooth-scrollbar.min.js' %}"></script>
   <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
-  <script>
+  <!-- <script>
     var ctx1 = document.getElementById("chart-line").getContext("2d");
 
     var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
@@ -338,13 +298,13 @@
       Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
     }
   </script>
-  <!-- Github buttons -->
+  
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
+  
   <script src="{% static 'assets/js/argon-dashboard.min.js' %}"></script>
 </body>
-
-<script>
+-->
+<script> 
 //    document.onkeydown = function(e){
 //       tecla = (document.all) ? e.keyCode : e.which;
 //       if (tecla == 116){
@@ -390,3 +350,6 @@
 
 </script>
 </html>
+{% else %}
+  <meta http-equiv="refresh" content="0;url={% url 'login' %}">
+{% endif %}
